--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <title><%= productName %></title>
 
+    <script src="https://js.tappaysdk.com/sdk/tpdirect/v5.15.0"></script>
+
+    <script>
+        TPDirect.setupSDK(127044, 'app_pENDXkVEoHhGT8DHLdyTetjnGSYaXCYPz7BDfqO9x9xWPyg4WKk9OQ0kEf5N', 'sandbox')
+    </script>
+
     <meta charset="utf-8">
     <meta name="description" content="<%= productDescription %>">
     <meta name="format-detection" content="telephone=no">
